--- a/cadastro.html
+++ b/cadastro.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: 'Arial', sans-serif;
-      background: linear-gradient(to right, #a331f5, #9b59b6);
+      background: linear-gradient(to right, #5FB6D9, #94D7F2);
       height: 100vh;
       display: flex;
       justify-content: center;
@@ -27,7 +27,7 @@
     }
 
     .left-panel {
-      background: #6a0dad;
+      background: #2685BF;
       color: #fff;
       flex: 1;
       display: flex;
@@ -53,7 +53,7 @@
 
     .left-panel button:hover {
       background: #fff;
-      color: #6a0dad;
+      color: #2685BF;
     }
 
     .right-panel {
@@ -70,7 +70,7 @@
     }
 
     .btn-purple {
-      background: #6a0dad;
+      background: #2685BF;
       color: #fff;
       border-radius: 30px;
       padding: 10px;
@@ -80,7 +80,7 @@
     }
 
     .btn-purple:hover {
-      background: #5b0c9b;
+      background: #2685BF;
     }
 
     .social-icons {
